--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+other_pages/__pycache__/
 *.py[cod]
 *$py.class
-
+.streamlit/
 # C extensions
 *.so
 
