--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ gspread==5.7.2
 oauth2client==4.1.3
 streamlit==1.16.0
 openpyxl==3.1.2
+streamlit-aggrid
 # google-api-python-client==2.69.0
 # google-auth-httplib2==0.1.0
 # google-auth-oauthlib==0.8.0
