--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ oauth2client==4.1.3
 streamlit==1.27.2
 openpyxl==3.1.2
 beautifulsoup4==4.11.*
+google-api-python-client==2.69.0
 # streamlit-aggrid
-# google-api-python-client==2.69.0
 # google-auth-httplib2==0.1.0
 # google-auth-oauthlib==0.8.0
