--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ streamlit==1.27.2
 openpyxl==3.1.2
 beautifulsoup4==4.11.*
 google-api-python-client==2.69.0
-streamlit-aggrid==.3.4.*
+streamlit-aggrid== 0.3.4.post3
 # google-auth-httplib2==0.1.0
 # google-auth-oauthlib==0.8.0
