--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ beautifulsoup4==4.11.*
 google-api-python-client==2.69.0
 streamlit-aggrid== 0.3.4.post3
 pandas==2.2.0
+pytube==15.0.0
 # google-auth-httplib2==0.1.0
 # google-auth-oauthlib==0.8.0
